Fixed QGifHandler::loopCount().

Task-number: QTBUG-7037
Reviewed-by: Kim
(cherry picked from commit 381f5ae82cccec3774b68674b4c0e782e9f49f6f)